--- a/dbproject/template/order.html
+++ b/dbproject/template/order.html
@@ -37,7 +37,7 @@
 			Select your Number to Order (NOT WORKING): <input type="Number" name="quantity" min="0" value="{{ quantity }}"/>
 			<input type="Submit" value="Add to Order" onclick="javascript: form.action='/updateOrder/';">
 
-			<div style="display: ">
+			<div style="display: none">
 				Tracking what's in order so far (for dax and noah)
 				<input type="text" name="productsInOrder" value="{{productsInOrder}}">
 				ID list
