--- a/dbproject/template/staffUpdate.html
+++ b/dbproject/template/staffUpdate.html
@@ -69,7 +69,7 @@
 			Type Product ID To Delete: <input type="Text" name="productIDtoChange" value="{{ productIDtoChange }}"/>
 			Type User ID To Delete: <input type="Text" name="userIDtoChange" min="0" value="{{ userIDtoChange }}"/>
 			Type Order ID To Delet: <input type="Order" name="orderIDtoChange" min="0" value="{{ orderIDtoChange }}"/>
-			<input type="Submit" value="Click to Delete Items" onclick="javascript: form.action='/staffItems/';">
+			<input type="Submit" value="Click to Delete Items" onclick="javascript: form.action='/staffDeleteItems/';">
 		</form>
 	</h2>
     
