--- a/dbproject/template/staffUpdatesSaved.html
+++ b/dbproject/template/staffUpdatesSaved.html
@@ -38,11 +38,11 @@
     {{productToChange.product_id}}
     {{productToChange.product_name}}
 
-    User:
+    Order:
     {{orderToChange.order_id}}
     {{orderToChange.order_name}}
 
-    Order
+    User
     {{userToChange.user_id}}
     {{userToChange.user_name}}
 	
