reloaded database and expand index.html page with view status indicators

--- a/dbproject/template/index.html
+++ b/dbproject/template/index.html
@@ -18,12 +18,32 @@
     <div id = "header">
 		<h1>Webstore Site Index</h1>
 	</div>
+
+	<div id = "subheader">
+		<h2>For Customers</h2>	
+	</div>
+
 	<div id = "index body">
 		<p><a href="/login">Login</a></p>
 		<p><a href="/register">Register</a></p>
 		<p><a href="/browse">Browse</a></p>		
 		<p><a href="/order">Order</a></p>
 		<p><a href="/account">Account</a></p>
+		
+	</div>
+
+	<div id = "subheader">
+		<h2>For Staff</h2>
+	</div>
+
+	<div id = "index body">
+		<p><a href="/admin">Admin</a></p>
+		<p><a href="/staffUpdate">Staff Update (broken)</a></p>
+		<p><a href="/staffUpdateItems">Staff Update Items (broken)</a></p>		
+		<p><a href="/staffSaveUpdates">Staff Save Updates (broken)</a></p>
+		<p><a href="/staffCreatItemsToAdd">Staff Create New Items(semi-functional)</a></p>
+		<p><a href="/staffAddItems">Staff Add Items (broken)</a></p>
+		<p><a href="/staffDeleteItems">Staff Delete Items (broken)</a></p>
 		
 	</div>
 
