--- a/dbproject/template/index.html
+++ b/dbproject/template/index.html
@@ -38,16 +38,14 @@
 
 	<div id = "index body">
 		<p><a href="/admin">Admin</a></p>
-		<p><a href="/staffUpdate">Staff Update (broken)</a></p>
-		<p><a href="/staffUpdateItems">Staff Update Items (broken)</a></p>		
-		<p><a href="/staffSaveUpdates">Staff Save Updates (broken)</a></p>
-		<p><a href="/staffCreatItemsToAdd">Staff Create New Items(semi-functional)</a></p>
-		<p><a href="/staffAddItems">Staff Add Items (broken)</a></p>
-		<p><a href="/staffDeleteItems">Staff Delete Items (broken)</a></p>
+		<p><a href="/staffUpdate">Staff Update</a></p>
+		<p><a href="/staffUpdateItems">Staff Update Items</a></p>		
+		<p><a href="/staffSaveUpdates">Staff Save Updates</a></p>
+		<p><a href="/staffCreatItemsToAdd">Staff Create New Items</a></p>
+		<p><a href="/staffAddItems">Staff Add Items</a></p>
+		<p><a href="/staffDeleteItems">Staff Delete Items</a></p>
 		
 	</div>
 
-   
-    
 </body>
 </html>
