--- a/dbproject/template/register.html
+++ b/dbproject/template/register.html
@@ -67,6 +67,10 @@
 
   </form>
     
+    <div id = "index redirect">
+          <p class="text--center"><a href="/index">Index</a><span class="fontawesome-arrow-right"></span></p>
+        </div>
+
     </div>
 
   </div>
