--- a/dbproject/template/auth.html
+++ b/dbproject/template/auth.html
@@ -46,9 +46,15 @@
 
       <p class="text--center">Not a member? <a href="/register">Sign up now</a> <span class="fontawesome-arrow-right"></span></p>
 
+        <div id = "index redirect">
+          <p class="text--center"><a href="/index">Index</a><span class="fontawesome-arrow-right"></span></p>
+        </div>
+      
     </div>
 
   </div>
+
+
 
 </body>
     
