current state of affairs

--- a/dbproject/template/account.html
+++ b/dbproject/template/account.html
@@ -18,6 +18,7 @@
       <p><a href="/accountUpdate">Update Account Information</a></p>
       <p><a href="/accountDelete">Delete Account</a></p>
       <p><a href="/accountOrders">View Orders</a></p>
+      <p><a href="/index">Index</a></p>
     </div>
 
     </div>
