--- a/dbproject/template/accountUpdate.html
+++ b/dbproject/template/accountUpdate.html
@@ -15,7 +15,7 @@
 
   <h1>Update Account Information</h1>
     {{ state }}
-     <form action="/account/" method="post" class="form form--login"/>{% csrf_token %}
+     <form action="/accountUpdate/" method="post" class="form form--login"/>{% csrf_token %}
     {% if next %}
     <input type="hidden" name="next" value="{{ next }}"/>
     {% endif %}
@@ -55,10 +55,10 @@
     <div class="form__field">
           <input type="submit" value="Update Account"/>
         </div>
-        <p class="text--center">Done here? <a href="/index">Continue Browsing</a> <span class="fontawesome-arrow-right"></span></p>
-
+        
   </form>
-    
+    <p class="text--center">Done here? <a href="/index">Continue Browsing</a> <span class="fontawesome-arrow-right"></span></p>
+
     </div>
 
   </div>
