--- a/dbproject/template/accountDelete.html
+++ b/dbproject/template/accountDelete.html
@@ -15,7 +15,7 @@
 
   <h1>Delete Account</h1>
     {{ state }}
-     <form action="/account/" method="post" class="form form--login"/>{% csrf_token %}
+     <form action="/accountDelete/" method="post" class="form form--login"/>{% csrf_token %}
     {% if next %}
     <input type="hidden" name="next" value="{{ next }}"/>
     {% endif %}
