continued debugging and minor reformatting

--- a/dbproject/template/browse.html
+++ b/dbproject/template/browse.html
@@ -25,7 +25,7 @@
 	<div class="site__container">
 	<div class="grid__container">
 	
-	<h1>Browse
+	<h1>Browse	 <a href="/index">Index</a> <span class="fontawesome-arrow-right"></span>
 	</h1>
 	</div>
 	<h2>
