--- a/dbproject/template/index.html
+++ b/dbproject/template/index.html
@@ -39,11 +39,11 @@
 	<div id = "index body">
 		<p><a href="/admin">Admin</a></p>
 		<p><a href="/staffUpdate">Staff Update</a></p>
-		<p><a href="/staffUpdateItems">Staff Update Items</a></p>		
+		<!--<p><a href="/staffUpdateItems">Staff Update Items</a></p>		
 		<p><a href="/staffSaveUpdates">Staff Save Updates</a></p>
 		<p><a href="/staffCreatItemsToAdd">Staff Create New Items</a></p>
 		<p><a href="/staffAddItems">Staff Add Items</a></p>
-		<p><a href="/staffDeleteItems">Staff Delete Items</a></p>
+		<p><a href="/staffDeleteItems">Staff Delete Items</a></p>-->
 		
 	</div>
 
