--- a/dbproject/template/order.html
+++ b/dbproject/template/order.html
@@ -68,8 +68,15 @@
 	{% if errorMessage %}
 	<h2>{{errorMessage}}</h2>
 	{% endif %}
-	</div>
+	
+	<h1>
+	   <a href="/index">Index</a> <span class="fontawesome-arrow-right"></span>
+	</h1>
     
+
+	</div>
+
+
 	
 
    
