--- a/dbproject/template/staffCreateItemsToAdd.html
+++ b/dbproject/template/staffCreateItemsToAdd.html
@@ -28,13 +28,11 @@
 	
 
 
-	<h1>Item ADD:: 
-	</h1>
+	<h1>Add New item </h1>
 	{% if errorMessage %}
 		<h1 style="color: red"> {{errorMessage}} </h1>
 	{% endif %}
 	<h2>
-		Add:
 		<form>
 			<h3>
 			Fill in what you want to update.  If you wish to leave anything unchanged, leave the field blank.</h3>
@@ -96,7 +94,8 @@
 			
 
 		</form>
-			
+		<a href="/index">Index</a> <span class="fontawesome-arrow-right"></span>
+		<a href="/staffUpdate">Staff Page</a> <span class="fontawesome-arrow-right"></span>
 	</h2>
     
 	
