--- a/dbproject/template/staffUpdatesSaved.html
+++ b/dbproject/template/staffUpdatesSaved.html
@@ -32,8 +32,14 @@
 	</h1>
 
 	<h2>
-		Updates Saved! View you changes ... uhhhh I haven't decided where yet.... </div>
+		Updates Saved! View your changes below: 
 	</h2>
+	<h2>
+		<a href="/staffUpdate">Staff Page</a> <span class="fontawesome-arrow-right"></span>
+		<a href="/index">Index</a> <span class="fontawesome-arrow-right"></span>
+	</h2>
+
+	<!--
 	Product:
     {{productToChange.product_id}}
     {{productToChange.product_name}}
@@ -45,7 +51,7 @@
     User
     {{userToChange.user_id}}
     {{userToChange.user_name}}
-	
+	-->
 
    
     
